updated datetime format

--- a/v3.1.0/todo
+++ b/v3.1.0/todo
@@ -1,7 +1,7 @@
 MVP:
-[] Add logging into db from server side
-[] Build local vector DB at startup from existing logs in DB
-[] Add RAG and test on postman with server endpoints
+[✅] Add logging into db from server side
+[✅] Build local vector DB at startup from existing logs in DB
+[✅] Add RAG and test on postman with server endpoints
 
 stretch:
 [] add per-user logs
